--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -4,7 +4,10 @@ on:
   push:
     tags:
     - '*'
-
+  schedule:
+     - cron: '0 0 1 * *'    # UTC 00:00 = 北京时间 08:00
+  workflow_dispatch:
+  
 jobs:
   build:
     runs-on: windows-latest
@@ -54,9 +57,11 @@ jobs:
           $tempDir = "$env:GITHUB_WORKSPACE\aria2_temp"
           $ariaPath = "$env:GITHUB_WORKSPACE\Aria2Fast\bin\Release\net9.0-windows\win-x64\publish\Aria2"
           New-Item -ItemType Directory -Force -Path $ariaPath
-          Invoke-WebRequest -Uri "https://github.com/aria2/aria2/releases/download/release-1.37.0/aria2-1.37.0-win-64bit-build1.zip" -OutFile "aria2.zip"
+          #Invoke-WebRequest -Uri "https://github.com/aria2/aria2/releases/download/release-1.37.0/aria2-1.37.0-win-64bit-build1.zip" -OutFile "aria2.zip"
+          Invoke-WebRequest -Uri "https://github.com/SKIYET/aria2-static-build/releases/download/continuous/aria2-x86_64-w64-mingw32_static.zip" -OutFile "aria2.zip"
           Expand-Archive -Path "aria2.zip" -DestinationPath $tempDir
-          Get-ChildItem -Path $tempDir\aria2-1.37.0-win-64bit-build1\* | Move-Item -Destination $ariaPath
+          #Get-ChildItem -Path $tempDir\aria2-1.37.0-win-64bit-build1\* | Move-Item -Destination $ariaPath
+          Get-ChildItem -Path $tempDir\* | Move-Item -Destination $ariaPath
           Remove-Item -Path $tempDir -Recurse -Force
         shell: powershell
       - name: Compress
