--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -6,7 +6,19 @@ on:
     - '*'
   schedule:
      - cron: '0 0 1 * *'    # UTC 00:00 = 北京时间 08:00
+  #手动触发
   workflow_dispatch:
+    inputs:
+      tag:
+        description: '发布Tag'
+        required: false
+        default: '1.0.0'
+        type: string
+      ref:
+        description: '发布ref'
+        required: false
+        default: 'RC'
+        type: string
   
 jobs:
   build:
